Minor overflow issue

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
 
   .dinoSurprise {
     top: 100%;
